unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/Sales_Rep_Sales_Summary__c.object-meta.xml
<CustomObject>
    <description>Team member&#39;s actual and budget summaries</description>
    <label>Sales Rep Sales Summary</label>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>Sales Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Sales Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>