unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Populated by integration</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F&amp;T</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>