unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Date_Calculated__c</fullName>
    <description>Populated by integration</description>
    <label>Date Calculated</label>
    <type>Date</type>
</CustomField>