unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Full_Month_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Month_GP_Percent_Budget__c</fullName>
    <formula>IF(OR(Full_Month_GP_Budget__c =0,Full_Month_Budget__c=0, ISBLANK(Full_Month_GP_Budget__c), ISBLANK(Full_Month_Budget__c)),0,Full_Month_GP_Budget__c /  Full_Month_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Month GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>