unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Full_Quarter_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Quarter_Budget__c</fullName>
    <description>Populated by integration. Current FQ</description>
    <label>Full Quarter Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>