unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Full_Quarter_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Quarter_GP_Percent_Budget__c</fullName>
    <formula>Full_Quarter_GP_Budget__c /  Full_Quarter_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Quarter GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>