unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Full_Year_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_GP_Percent_Budget__c</fullName>
    <formula>IF(OR(Full_Year_GP_Budget__c =0, Full_Year_Budget__c=0, ISBLANK(Full_Year_GP_Budget__c), ISBLANK(Full_Year_Budget__c)),0,Full_Year_GP_Budget__c/Full_Year_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>