unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Last_Year_YTD_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_YTD_GP_Percent__c</fullName>
    <formula>Last_Year_YTD_GP__c /  Last_Year_YTD_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year YTD GP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>