unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/MTD_GP__c.field-meta.xml
<CustomField>
    <fullName>MTD_GP__c</fullName>
    <description>Populated by integration</description>
    <label>MTD GP $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>