unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/MTD_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>MTD_GP_Percent__c</fullName>
    <formula>IF(OR(MTD_GP__c=0, MTD_Sales__c=0, ISBLANK(MTD_GP__c), ISBLANK(MTD_Sales__c)),0,MTD_GP__c /  MTD_Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD GP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>