unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/MTD_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>MTD_GP_Percent_Budget__c</fullName>
    <formula>IF( OR(MTD_GP_Budget__c =0, MTD_Budget__c=0, ISBLANK(MTD_GP_Budget__c ), ISBLANK(MTD_Budget__c)),0,MTD_GP_Budget__c /  MTD_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>