unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/QTD_GP__c.field-meta.xml
<CustomField>
    <fullName>QTD_GP__c</fullName>
    <description>Populated by integration</description>
    <label>QTD GP $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>