unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/QTD_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>QTD_GP_Percent__c</fullName>
    <formula>IF(OR(QTD_GP__c = 0,QTD_Sales__c=0, ISBLANK(QTD_GP__c ), ISBLANK(QTD_Sales__c)),0, QTD_GP__c /  QTD_Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTD GP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>