unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/QTD_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>QTD_GP_Percent_Budget__c</fullName>
    <formula>IF(

OR(QTD_GP_Budget__c =0, QTD_Budget__c=0, ISBLANK(QTD_GP_Budget__c), ISBLANK(QTD_Budget__c)),0, QTD_GP_Budget__c /  QTD_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTD GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>