unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <label>Sales Rep ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>