unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Sales_Summary_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Summary_External_ID__c</fullName>
    <description>This is integrated with DW.</description>
    <externalId>true</externalId>
    <label>Sales Summary External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>