unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/Team_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>