unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/YTD_GP_Budget__c.field-meta.xml
<CustomField>
    <fullName>YTD_GP_Budget__c</fullName>
    <description>Populated by integration</description>
    <label>YTD GP $ Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>