unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/YTD_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>YTD_GP_Percent__c</fullName>
    <formula>IF(OR(YTD_GP__c = 0,YTD_Sales__c = 0, ISBLANK(YTD_GP__c), ISBLANK(YTD_Sales__c )), 0,YTD_GP__c /  YTD_Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD GP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>