unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/YTD_GP_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>YTD_GP_Percent_Budget__c</fullName>
    <formula>IF(OR( YTD_GP_Budget__c =0, YTD_Budget__c=0, ISBLANK(YTD_GP_Budget__c ), ISBLANK(YTD_Budget__c)),0,YTD_GP_Budget__c /  YTD_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD GP % Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>