unpackaged/main/default/objects/Sales_Rep_Sales_Summary__c/fields/YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales__c</fullName>
    <description>Populated by integration</description>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>